# DB_VirRt

./: README.md
Etl_pipeline/: README.md
Etl_pipeline/explorations/: ParsedDataEda.ipynb  RawDataEDA.ipynb  RawDataParser.ipynb  data_gathering_code.ipynb  dc_pipe_design.ipynb  parsed_data_eda.ipynb  sample_exploration.sql
Etl_pipeline/transformations/: sample_zones_etl_pipeline.sql  url_gen.sql
Tasks/: Generate_urls.ipynb  RawDataParser_exact.ipynb  RawDataParser_nearby.ipynb  data_wrag.ipynb  depts.ipynb
hpd_data_pipeline/: README.md
hpd_data_pipeline/explorations/: pine_code_test.ipynb  sample_exploration.py
hpd_data_pipeline/scripts/: vector_db_ctrl_tbl.sql  volumn_creation.sql
hpd_data_pipeline/transformations/brz_prs_data/: brz_genereated_urls.py  brz_raw_data_scrapper.py  brz_raw_parsed.py  feat_ref_dump.py
hpd_data_pipeline/transformations/fe_prs_data/: fp_home_features.py  fp_parsed_data.py
hpd_data_pipeline/utilities/: data_vectorizations.py  zip_file_generator.py
rag-app/: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
rag-app/config/: base.yaml
rag-app/config/vector_store/: pinecone.yaml
